# CommandsApplication

./: .gitignore  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  vite.config.ts
docs/architecture/: README.md  overview.md
docs/reference/: README.md  sqlite-schema.md  tauri-command-contracts.md
openspec/changes/mindmap-cmd-executor/: SKILL_MANAGEMENT.md  design.md  proposal.md  tasks.md
openspec/changes/mindmap-cmd-executor/specs/command-generation/: spec.md
openspec/changes/mindmap-cmd-executor/specs/command-mindmaps/: spec.md
openspec/changes/mindmap-cmd-executor/specs/command-template-library/: spec.md
openspec/changes/mindmap-cmd-executor/specs/tauri-desktop-runtime/: spec.md
openspec/changes/mindmap-cmd-executor/specs/validator-rules/: spec.md
src/: App.vue  README.md  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  storage.rs
src/api/: runtime.ts
src/components/: GraphView.vue  InspectorPanel.vue  OutputPreview.vue  SaveStatus.vue  TemplateEditor.vue  TemplateLibrary.vue  TreeView.vue
src/domain/: contracts.ts  models.ts
src/stores/: editor.ts
src/utils/: outputPreview.test.ts  outputPreview.ts  transferFormats.test.ts  transferFormats.ts  validators.test.ts  validators.ts
