[package]
name = "commandsexecuter"
version = "0.1.0"
description = "Visual command-mindmap editor runtime"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.3", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.39", default-features = true, features = ["clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
